Enhance OrganizeMe setup documentation
Expanded the setup documentation for the OrganizeMe application, including prerequisites, project structure, setup instructions, and troubleshooting tips.